Use CDN TailwindCSS stylesheet

--- a/markdown-frontend/src/main/resources/index.html
+++ b/markdown-frontend/src/main/resources/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Markdown Party</title>
+  <!-- TODO : Install tailwind through NPM directly. -->
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
 <div id="root"></div>
