Change the background color

--- a/markdown-frontend/src/main/resources/index.html
+++ b/markdown-frontend/src/main/resources/index.html
@@ -5,6 +5,12 @@
   <title>Markdown Party</title>
   <!-- TODO : Install tailwind through NPM directly. -->
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    /* Taken from OneDark. */
+    body {
+      background-color: #282c34;
+    }
+  </style>
 </head>
 <body>
 <div id="root"></div>
