--- a/markdown-frontend-compose/src/jsMain/resources/index.html
+++ b/markdown-frontend-compose/src/jsMain/resources/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Markdown Party</title>
   <!-- TODO : Install tailwind through NPM directly. -->
-  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/tailwindcss@2.2.10/dist/tailwind.min.css" rel="stylesheet">
   <style>
     /* Taken from OneDark. */
     body {
