--- a/markdown/markdown-frontend-compose/src/jsMain/resources/index.html
+++ b/markdown/markdown-frontend-compose/src/jsMain/resources/index.html
@@ -7,5 +7,6 @@
 <body>
 <div id="root"></div>
 </body>
+<script src="config.js"></script>
 <script src="markdown-frontend-compose.js"></script>
 </html>
